# sharprocket

./: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  sharpdev.yml  tox.ini
.circleci/: config.yml
sharprocket/: __main__.py  classes.py  constants.py
sharprocket/drive/: text.gdoc  text.txt
sharprocket/tasks/: boxes.py  images.py  pdf.py  place.py  text.py  user.py
tests/: box_e2e_test.py  e2e_test.py
tests/unit/: data.py  test_boxes.py  test_finding_boxes.py  test_images.py
