[tool.poetry]
name = "SharpRocket"
version = "0.1.0"
description = ""
authors = ["Sharpz7 <adam@mcaq.me>"]

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.0"
pytest = "^7.1.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.3"
black = "^22.3.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
